adding postgres as sink

--- a/docker-compose-flink.yml
+++ b/docker-compose-flink.yml
@@ -34,4 +34,19 @@ services:
     environment:
       - FLINK_JOBMANAGER_HOST=jobmanager
       - FLINK_JOBMANAGER_PORT=6123
-      - FLINK_PARALLELISM=2    
+      - FLINK_PARALLELISM=2
+
+  postgres:
+    image: postgres:14
+    container_name: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgresuser
+      POSTGRES_PASSWORD: postgrespw
+      POSTGRES_DB: rides_db
+    volumes:
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata: 
