--- a/flink-processing-service/pom.xml
+++ b/flink-processing-service/pom.xml
@@ -47,10 +47,17 @@
             <version>3.1.0-1.17</version>
         </dependency>
 
-        <dependency>
+<!--         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.27</version>
+        </dependency> -->
+         
+         <!-- PostgreSQL Driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.1</version>
         </dependency>
     </dependencies>
 
