--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -17,7 +17,9 @@ services:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
-
+    networks:
+      - realtimeanalytics  
+      
   kafka:
     image: confluentinc/cp-kafka:7.1.0
     hostname: kafka
@@ -42,6 +44,8 @@ services:
       retries: 5
       start_period: 10s
       timeout: 5s
+    networks:
+      - realtimeanalytics    
 
   zookeeper:
     image: zookeeper:latest
@@ -53,6 +57,8 @@ services:
       ZOO_MY_ID: 1
       ZOO_PORT: 2181
       ZOO_SERVERS: server.1=zookeeper:2888:3888;2181
+    networks:
+      - realtimeanalytics    
 
   rides-service:
     build: rides-service
@@ -61,4 +67,10 @@ services:
       mysql:
         condition: service_healthy
       kafka:
-        condition: service_healthy     
+        condition: service_healthy
+    networks:
+      - realtimeanalytics  
+
+networks:
+  realtimeanalytics:
+    name: realtimeanalytics    
